syntax = "proto3";

package event;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "pkg/utils/protoutils/ghoster/proto/ghoster.proto";

option go_package = "github.com/werbot/werbot/internal/core/event/proto/event";

service EventHandlers {
  rpc Events(Events.Request) returns (Events.Response) {}
  rpc Event(Event.Request) returns (Event.Response) {}
  rpc AddEvent(AddEvent.Request) returns (AddEvent.Response) {}
}

enum EventSection {
  section_unspecified = 0;
  profile = 1;
  project = 2;
  scheme = 3;
}

enum EventType {
  event_unspecified = 0;
  onOnline = 1;
  onOffline = 2;
  onCreate = 3;
  onEdit = 4;
  onRemove = 5;
  onActive = 6;
  onInactive = 7;
  onChange = 8;
  onLogin = 9;
  onLogoff = 10;
  onReset = 11;
  onUpdate = 12;
  onRequest = 13;
  onMessage = 14;
}

// section profile
message Profile {
  enum Section {
    section_unspecified = 0;
    profile = 1;
    setting = 2;
    password = 3;
    ssh_key = 4;
    license = 5;
    project = 6;
  }

  string id = 1 [(buf.validate.field).string.uuid = true, (buf.validate.field).required = true];
  Section section = 2 [(buf.validate.field).enum.defined_only = true, (buf.validate.field).required = true];
}

// section project
message Project {
  enum Section {
    section_unspecified = 0;
    project = 1;
    setting = 2;
    member = 3;
    team = 4;
    server = 10;
    database = 11;
    application = 12;
    desktop = 13;
    container = 14;
    cloud = 15;
  }

  string id = 1 [(buf.validate.field).string.uuid = true, (buf.validate.field).required = true];
  Section section = 2 [(buf.validate.field).enum.defined_only = true, (buf.validate.field).required = true];
}

// section scheme
message Scheme {
  enum Section {
    section_unspecified = 0;
    scheme = 1;
    member = 2;
    activity = 3;
    firewall = 4;
    setting = 5;
  }

  string id = 1 [(buf.validate.field).string.uuid = true, (buf.validate.field).required = true];
  Section section = 2 [(buf.validate.field).enum.defined_only = true, (buf.validate.field).required = true];
}

// rpc Events
message Events {
  message Request {
    bool is_admin = 1; // @gotags: json:"-"
    string profile_id = 2 [(buf.validate.field).string.uuid = true, (buf.validate.field).required = true]; // @gotags: json:"-"

    oneof id {
      option (buf.validate.oneof).required = true;
      string user_id = 3 [(buf.validate.field).string.uuid = true];
      string project_id = 4 [(buf.validate.field).string.uuid = true];
      string scheme_id = 5 [(buf.validate.field).string.uuid = true];
    }
    int32 limit = 6;
    int32 offset = 7;
    string sort_by = 8; // @gotags: json:"-"
  }

  message Response {
    int32 total = 1;
    repeated Event.Response records = 2;
  }
}
// -----------------------------------------------------

// rpc Event
message Event {
  message Request {
    bool is_admin = 1; // @gotags: json:"-"
    string profile_id = 2 [(buf.validate.field).string.uuid = true, (buf.validate.field).required = true]; // @gotags: json:"-"

    oneof id {
      option (buf.validate.oneof).required = true;
      string user_id = 3 [(buf.validate.field).string.uuid = true];
      string project_id = 4 [(buf.validate.field).string.uuid = true];
      string scheme_id = 5 [(buf.validate.field).string.uuid = true];
    }

    string session_id = 6 [(buf.validate.field).string.uuid = true, (buf.validate.field).ignore_empty = true];
  }

  message Response {
    oneof id {
      string user_id = 1;
      string project_id = 2;
      string scheme_id = 3;
    }
    string profile_id = 4 [(ghoster.secret) = true];;
    string session_id = 5;
    string user_agent = 6;
    string ip = 7;
    EventType event = 8;
    int32 section = 9;
    bytes meta_data = 10;
    google.protobuf.Timestamp created_at = 11;
  }
}
// -----------------------------------------------------

// rpc AddEvent
message AddEvent {
  message Request {
    string profile_id = 1 [(buf.validate.field).string.uuid = true, (buf.validate.field).required = true]; // @gotags: json:"-"
    string session_id = 2 [(buf.validate.field).string.uuid = true, (buf.validate.field).required = true]; // @gotags: json:"-"
    oneof section {
      option (buf.validate.oneof).required = true;
      Profile profile = 3;
      Project project = 4;
      Scheme scheme = 5;
    }
    string user_agent = 6;
    string ip = 7 [(buf.validate.field).string.ip = true, (buf.validate.field).required = true];
    EventType event = 8 [(buf.validate.field).enum.defined_only = true, (buf.validate.field).required = true];
    bytes meta_data = 9;
  }

  message Response {
    string record_id = 1;
  }
}
// -----------------------------------------------------
